# DP-KFC

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
configs/: exp1_bert_stackoverflow.yaml  exp1_cnn_mnist.yaml  exp1_crossvit_cifar100.yaml  exp_baselines_comparison.yaml  exp_full_sweep.yaml  exp_lora_cifar100.yaml  exp_quick_baselines.yaml  exp_scenarios.yaml
docs/: paper.tex
results/: transfer_alignment_results.csv
scripts/: exp_1_cnn_mnist.py  exp_1_cross_vit_cifar100.py  exp_1_robert_stackoverflow.py  exp_3.py  results_exp_1.py  vis_1.py
scripts/paper/: ablation_adadps.py  ablation_cov_tracking.py  ablation_fim_spectrum.py  ablation_transfer_alignment.py  exp_cnn_mnist.py  exp_crossvit_cifar100.py  exp_imdb_logreg.py  exp_sst2.py  exp_stackoverflow.py
scripts/paper/visualize/: generate_latex_tables.py  visualize_cov_tracking.py  visualize_nlp.py  visualize_spectrum.py  visualize_vision.py
src/dp_kfac/: __init__.py  analysis.py  baselines.py  config.py  covariance.py  data.py  experiment.py  lora.py  methods.py  models.py  optimizer.py  precondition.py  privacy.py  recorder.py  results.py  trainer.py  types.py
