[project]
name = "dp-kfac"
version = "0.1.0"
description = "Differentially Private KFAC Optimizer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "opacus>=1.5.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "pyyaml>=6.0",
    "timm>=1.0.0",
    "rich>=14.2.0",
]

[project.optional-dependencies]
nlp = ["transformers>=4.40.0"]

[project.scripts]
dp-kfac = "dp_kfac.cli:main"
