[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dp_kfac"]

[project]
name = "dp-kfac"
version = "0.1.0"
description = "Differentially Private KFAC Optimizer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=1.26.0",
    "opacus>=1.5.4",
    "pandas>=2.2.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "pyyaml>=6.0",
    "scikit-learn>=1.4.0",
    "timm>=1.0.0",
    "rich>=14.2.0",
]

[project.optional-dependencies]
nlp = ["transformers>=4.40.0", "datasets>=2.18.0"]
medical = [
    "medmnist>=3.0.0",
]

[project.scripts]
dp-kfac = "dp_kfac.cli:main"
